# lest

./: .gitignore  .luaurc  Cargo.toml  LICENSE  README.md  build.rs  lest.toml  rokit.toml  selene.toml  stylua.toml
.github/workflows/: ci.yml  release.yml
docs/: backends.md  cli.md  configuration.md  continuous-integration.md  contributing.md  coverage.md  getting-started.md  matchers.md  snapshots.md  studio.md  writing-tests.md
luau/core/: README.md  context.luau  expect.luau  format.luau  init.luau
luau/runtime/: harness.luau
luau/runtime/cloud/: collector.luau  sanitize.luau  scheduler.luau
luau/studio/: bridge.luau  main.luau
src/: changed.rs  config.rs  coverage.rs  discover.rs  embed.rs  error.rs  init.rs  main.rs  self_cmd.rs  snapshot.rs  studio.rs  watch.rs
src/backend/: mod.rs  native.rs  runtime.rs  studio.rs
src/backend/cloud/: api.rs  bundle.rs  mod.rs
src/report/: coverage.rs  diagnostic.rs  event.rs  json.rs  junit.rs  mod.rs  pretty.rs  snapshot.rs
src/resolve/: mod.rs  project_tests.rs  tests.rs
src/studio/: bridge.rs
tests/core/: expect.spec.luau  format.spec.luau  hooks.spec.luau  runner.spec.luau  sanitize.spec.luau  snapshot.spec.luau
tests/coverage/: calculator.luau  calculator.spec.luau
tests/engine/: instance.spec.luau
tests/lune/: runtime.spec.luau
tests/lute/: runtime.spec.luau
tests/snapshot/: snapshot.spec.luau
tests/snapshot/__snapshots__/: snapshot.spec.luau.snap
tests/studio/: bridge.spec.luau
