[package]
name = "lest"
version = "0.2.0"
edition = "2021"
description = "lest: a testing toolchain for Luau"
license = "MIT"
repository = "https://github.com/lest-luau/lest"
homepage = "https://github.com/lest-luau/lest"
readme = "README.md"
keywords = ["luau", "testing", "roblox", "lune", "test-framework"]
categories = ["development-tools::testing", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
indexmap = { version = "2", features = ["serde"] }
inquire = "0.7"
mlua = { version = "0.11", features = ["luau"] }
notify = "8"
serde = { version = "1", features = ["derive"] }
# `preserve_order` so rewriting a user's .luaurc keeps their key order.
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
ureq = { version = "2.10", features = ["json"] }
dotenvy = "0.15"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3"
